test/extension_test_cases/valid/structs/structcreation.wacc
# structs

# Output:
# #empty#

# Exit:
# 0

# Program:

struct MyType is
  char a ;
  bool b5 ;
  bool b4 ;
  bool b3 ;
  bool b2 ;
end

struct MyType2 is
  int lhs ;
  int rhs ;
end

begin
  struct MyType2 i = new MyType2(5, 7);
  $MyType i2 = new MyType('a', true, true, false, false || true);
  exit 0
end
